--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "main": "dist/index.js",
+  "main": "index.ts",
   "dependencies": {
     "typescript": "^4.1.2"
   }
