--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "simple-websockets-event-wrapper",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple event api + websocket",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "tsc"
+    "build": "tsc",
+    "prepare": "npm run build"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "main": "index.ts",
-  "dependencies": {
-    "typescript": "^4.1.2"
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": ["lib/**/*"],
+  "dependencies": {},
+  "devDependencies": {
+    "typescript": "^4.2.3"
   }
 }
